deps: add Jackson 2 compatibility for Spring Boot 4.0
Spring Boot 4.0 upgrades to Jackson 3 by default. To defer the Jackson 3
migration and continue using Jackson 2, configure the preferred JSON mapper
and add required dependencies.

Changes:
- Add spring-boot-jackson2 dependency to gateways/gateway-mcp/pom.xml
- Add spring-boot-jackson2 dependency to zeebe/gateway-rest/pom.xml
- Configure spring.http.converters.preferred-json-mapper=jackson2 in
  dist/src/main/resources/application.properties (production)
- Configure spring.http.converters.preferred-json-mapper=jackson2 in
  zeebe/gateway-rest/src/test/resources/application.yml (tests)

The property tells Spring MVC to use Jackson 2 for HTTP message conversion,
which properly picks up the custom deserializers defined in JacksonConfig.

The Jackson 3 migration will be addressed in a separate follow-up task.

Reference: https://docs.spring.io/spring-boot/4.0-SNAPSHOT/reference/features/json.html#features.json.jackson2